# schedule

./: Cargo.toml
migrations/: script.sql
schedule-bot/: Cargo.toml
schedule-bot/src/: config.rs  database.rs  dialogue.rs  main.rs
schedule-bot/src/database/: day.rs  lesson.rs  week.rs
schedule-bot/src/dialogue/: states.rs
schedule-bot/src/dialogue/states/: day.rs  start.rs
schedule-bot/src/schedule/: command.rs
schedule-web/: Cargo.toml
schedule-web/src/: main.rs
