[package]
name = "schedule-bot"
version = "0.0.1"
authors = ["Belz"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.8"
log = "0.4.8"
pretty_env_logger = "0.4.0"
futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.teloxide]
version = "0.4"
features = ["auto-send", "macros"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-native-tls", "postgres", "chrono"]
